tests/ext/invalid/ListSublist_CompileFail_2.whiley
void System::main([string] args):
    list = [1,2,3]
    sublist = list[1:4]
    print str(list)
    print str(sublist)
